Fix the mugshot getting stretched on Chromium

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -90,6 +90,7 @@ $sidebar-width: 20%;
 		}
 
 		.mugshot {
+			flex: none;
 			float: none;
 			max-width: none;
 		}
